api spec & data model
